View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032473 | Open CASCADE | OCCT:Visualization | public | 2021-07-05 23:34 | 2021-07-10 12:40 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032473: Visualization, WNT_Window::ProcessMessage() - handle WM_TOUCH | ||||
Description | WNT_Window::ProcessMessage() is expected to handle WM_TOUCH events. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32473 has been created by kgv. SHA-1: 0feb9337cdafc30476ac7f1f2a1dae52db2d99a7 Detailed log of new commits: Author: kgv Date: Mon Jul 5 23:34:33 2021 +0300 0032473: Visualization, WNT_Window::ProcessMessage() - handle WM_TOUCH |
|
Branch CR32473 has been updated forcibly by kgv. SHA-1: bc78251bb2c241d2bc232ce688a88c72f871d946 |
|
Branch CR32473 has been updated forcibly by kgv. SHA-1: 3ced3feb87c863e5d9582e0f28047828934eee4b |
|
Branch CR32473 has been updated forcibly by kgv. SHA-1: 7832684b70d74ab1508395e0c42bb4a68eaac453 |
|
Patch is ready for review - OCCT: branch CR32473. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32473-master-KGV/ |
|
The patch was reviewed without remarks |
|
Problem on Mingw http://jenkins-test-11.nnov.opencascade.com/view/WEEK-27_WEEK-27/view/OCCT%20compile/job/WEEK-27_WEEK-27-OCCT-Windows-64-Mingw-opt-compile/2/parsed_console/ |
|
Branch CR32473 has been updated by kgv. SHA-1: e5827deeb595e160fff45cec76365614f7040ecf Detailed log of new commits: Author: kgv Date: Fri Jul 9 15:55:07 2021 +0300 _WIN32_WINNT in CMake configuration for MinGW has been raised from 0x0501 to 0x0601. |
|
Branch CR32473_1 has been created by kgv. SHA-1: abecbcf98946c9e2e4b6588b92ae2c953d59b638 Detailed log of new commits: Author: kgv Date: Mon Jul 5 23:34:33 2021 +0300 0032473: Visualization, WNT_Window::ProcessMessage() - handle WM_TOUCH WNT_Window::ProcessMessage() now redirects WM_TOUCH events to AIS_ViewController, so that it is possible to use multitouch displays in Draw Harness on Windows platform. _WIN32_WINNT in CMake configuration for MinGW has been raised from 0x0501 to 0x0601. |
|
Please take updated patch in branch CR32473_1. |
|
Combination - OCCT branch : IR-2021-07-09 master SHA - cb7f92396f80270e13206be742038ca0ce04571a a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-07-09 SHA - a0de44eb21bec792a53984d50cb770f6679dbbd8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17537.450000000343 / 17428.46000000034 [+0.63%] Products Total CPU difference: 11490.74000000011 / 11521.620000000124 [-0.27%] Windows-64-VC14: OCCT Total CPU difference: 19309.859375 / 19266.640625 [+0.22%] Products Total CPU difference: 12831.40625 / 12854.9375 [-0.18%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32473 has been deleted by mnt. SHA-1: e5827deeb595e160fff45cec76365614f7040ecf |
|
Branch CR32473_1 has been deleted by mnt. SHA-1: abecbcf98946c9e2e4b6588b92ae2c953d59b638 |
occt: master 7b17aba7 2021-07-05 20:34:33 Committer: bugmaster Details Diff |
0032473: Visualization, WNT_Window::ProcessMessage() - handle WM_TOUCH WNT_Window::ProcessMessage() now redirects WM_TOUCH events to AIS_ViewController, so that it is possible to use multitouch displays in Draw Harness on Windows platform. _WIN32_WINNT in CMake configuration for MinGW has been raised from 0x0501 to 0x0601. |
Affected Issues 0032473 |
|
mod - adm/cmake/occt_defs_flags.cmake | Diff File | ||
mod - src/V3d/V3d_View.cxx | Diff File | ||
mod - src/WNT/WNT_Window.cxx | Diff File | ||
mod - src/WNT/WNT_Window.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-07-05 23:34 | kgv | New Issue | |
2021-07-05 23:34 | kgv | Assigned To | => kgv |
2021-07-05 23:50 | git | Note Added: 0102290 | |
2021-07-06 00:38 | git | Note Added: 0102291 | |
2021-07-06 00:42 | kgv | Relationship added | related to 0032433 |
2021-07-06 00:42 | kgv | Relationship added | child of 0032306 |
2021-07-06 00:57 | git | Note Added: 0102292 | |
2021-07-06 01:02 | git | Note Added: 0102293 | |
2021-07-06 09:21 | kgv | Note Added: 0102295 | |
2021-07-06 09:21 | kgv | Assigned To | kgv => osa |
2021-07-06 09:21 | kgv | Status | new => resolved |
2021-07-07 12:58 | osa | Note Added: 0102322 | |
2021-07-07 12:58 | osa | Assigned To | osa => bugmaster |
2021-07-07 12:58 | osa | Status | resolved => reviewed |
2021-07-09 13:49 | bugmaster | Note Added: 0102394 | |
2021-07-09 13:49 | bugmaster | Assigned To | bugmaster => kgv |
2021-07-09 13:49 | bugmaster | Status | reviewed => assigned |
2021-07-09 15:55 | git | Note Added: 0102400 | |
2021-07-09 15:57 | git | Note Added: 0102401 | |
2021-07-09 15:57 | kgv | Note Added: 0102402 | |
2021-07-09 15:57 | kgv | Assigned To | kgv => bugmaster |
2021-07-09 15:57 | kgv | Status | assigned => resolved |
2021-07-09 15:57 | kgv | Status | resolved => reviewed |
2021-07-10 12:23 | bugmaster | Note Added: 0102435 | |
2021-07-10 12:23 | bugmaster | Status | reviewed => tested |
2021-07-10 12:29 | bugmaster | Test case number | => Not required |
2021-07-10 12:30 | bugmaster | Changeset attached | => occt master 7b17aba7 |
2021-07-10 12:30 | bugmaster | Status | tested => verified |
2021-07-10 12:30 | bugmaster | Resolution | open => fixed |
2021-07-10 12:40 | git | Note Added: 0102445 | |
2021-07-10 12:40 | git | Note Added: 0102446 |